fixed map z-index issue

--- a/style.css
+++ b/style.css
@@ -278,7 +278,7 @@ li {
   align-items: center;
   gap: 2em;
   padding: 1em 0 0.5em 0;
-  z-index: 100;
+  z-index: 9999;
   box-shadow: 0 2px 12px #0002;
   backdrop-filter: blur(8px);
 }
